Fix spacing on menu tab

--- a/src/styles/pages/_menu.scss
+++ b/src/styles/pages/_menu.scss
@@ -1,5 +1,5 @@
 #menu {
-  padding: 2rem 2rem 2rem 2rem;
+  padding: 1rem 2rem 2rem 2rem;
 
   & .banner-wrapper {
     display: block;
